--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: AntiExplosion
 version: 0.4
 main: com.bghddevelopment.explosion.AntiExplosion
-authors: BGHDDevelopmentLLC
+author: BGHDDevelopmentLLC
 website: https://bghddevelopment.com/
